# soloud-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  compile_commands.json  temp.rs
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
demos/: fltk_app.rs
soloud/: Cargo.toml
soloud-derive/: Cargo.toml
soloud-derive/src/: audio.rs  audio_source.rs  filter.rs  lib.rs  load.rs  loadable.rs
soloud-sys/: Cargo.toml  README.md  bind.sh  build.rs
soloud-sys/examples/: sys_simple.rs  sys_speech.rs
soloud-sys/src/: lib.rs  soloud.rs  soloud_derives.rs
soloud-sys/sys/: CMakeLists.txt  soloud.patch  soloud_derives.cpp  soloud_derives.h  soloud_new.cpp
soloud-sys/sys/examples/: ca.cpp  example.cpp
soloud/examples/: ca_bug.rs  filter.rs  include_bytes.rs  load_mem.rs  recho.rs  simple.rs  speech.rs  withfltk.rs
soloud/src/: ay.rs  effects.rs  lib.rs  monotone.rs  noise.rs  openmpt.rs  prelude.rs  queue.rs  sfxr.rs  soloud.rs  speech.rs  tedsid.rs  vic.rs  vizsn.rs  wav.rs  wavstream.rs
soloud/src/audio/: ay.rs  bus.rs  mod.rs  monotone.rs  noise.rs  openmpt.rs  queue.rs  sfxr.rs  speech.rs  tedsid.rs  vic.rs  vizsn.rs  wav.rs  wavstream.rs
soloud/src/filter/: bass.rs  biquad.rs  dc.rs  echo.rs  fft.rs  flanger.rs  freeverb.rs  lofi.rs  mod.rs  robotize.rs  waveshaper.rs
soloud/src/macros/: audio.rs  filter.rs  load.rs  mod.rs
