[package]
name = "soloud-derive"
version = "0.1.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "soloud_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "^1.0.38"
quote = "^1.0.7"
