[package]
name = "soloud-derive"
version = "0.2.2"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "Rust bindings for the soloud audio engine"
repository = "https://github.com/MoAlyousef/soloud-rs"
documentation = "https://docs.rs/soloud"
keywords = ["audio", "playback", "synthesizer"]
categories = ["multimedia::audio"]
license = "MIT"
exclude = ["./examples"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "soloud_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "^1.0.50"
quote = "^1.0.7"
