[package]
name = "soloud-sys"
version = "0.3.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
build = "build.rs"
description = "Rust bindings for the soloud audio engine"
repository = "https://github.com/MoAlyousef/soloud-rs"
documentation = "https://docs.rs/soloud"
keywords = ["audio", "playback", "synthesizer"]
categories = ["multimedia::audio"]
license = "MIT"
exclude = ["./examples"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.82"

[build-dependencies]
cmake = { version = "^0.1.45", git = "https://github.com/moalyousef/cmake-rs" }

[features]
use-ninja = []
miniaudio = []
sdl2 = []
sdl2-static = []
portaudio = []
openal = []
xaudio2 = []
winmm = []
wasapi = []
oss = []
alsa = []
opensles = []
coreaudio = []
jack = []
nosound = []
null = []