[package]
name = "soloud-sys"
version = "1.0.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
build = "build/main.rs"
description = "Rust bindings for the soloud audio engine"
repository = "https://github.com/MoAlyousef/soloud-rs"
documentation = "https://docs.rs/soloud"
keywords = ["audio", "playback", "synthesizer"]
categories = ["multimedia::audio"]
license = "MIT"
exclude = ["./examples"]
readme = "../README.md"

[build-dependencies]
cmake = "^0.1.45"

[features]
use-ninja = []
miniaudio = []
sdl2 = []
sdl2-static = []
portaudio = []
openal = []
xaudio2 = []
winmm = []
wasapi = []
oss = []
alsa = []
opensles = []
coreaudio = []
jack = []
nosound = []
null = []