[package]
name = "soloud"
version = "0.2.0"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "Rust bindings for the soloud audio engine"
repository = "https://github.com/MoAlyousef/soloud-rs"
documentation = "https://docs.rs/soloud"
keywords = ["audio", "playback", "synthesizer"]
categories = ["multimedia::audio"]
license = "MIT"
exclude = ["./examples"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soloud-sys = { path = "../soloud-sys", version = "0.2.0" }
soloud-derive = { path = "../soloud-derive", version = "0.2.0" } 

[features]
use-ninja = ["soloud-sys/use-ninja"]
